scribble-test/src/test/resources/bad/wfchoice/gdo/params/Test03.scr
module bad.wfchoice.gdo.params.Test03;


sig <java> "foo" from "bar" as M1;


global protocol Foo(role A, role B)
{
	choice at A
	{
		M1 from A to B;
	}
	or
	{
		do Bar<M1>(A, B);
		do Bar<1()>(A, B);
	}
}


aux global protocol Bar<sig M>(role A, role B)
{
	M from A to B;
}
//*/
